--- a/styles.css
+++ b/styles.css
@@ -65,6 +65,10 @@ body {
   margin-top: var(--panel-gap);
 }
 
+.panel-row > .panel + .panel {
+  margin-top: 0;
+}
+
 .button-row {
   display: flex;
   flex-wrap: wrap;
